--- a/Store/Areas/Admin/Pages/Localization/Language/_List.cshtml
+++ b/Store/Areas/Admin/Pages/Localization/Language/_List.cshtml
@@ -7,7 +7,7 @@
     {
         <tr>
             <th scope="row">
-                <input class="form-check-input" type="checkbox" name="@IndexModel.CheckboxName" value="@language.Id" />
+                <input class="form-check-input" type="checkbox" name="@JavascriptVariables.Instance.CheckboxName" value="@language.Id" />
             </th>
 
             <td>@language.Name</td>
@@ -16,7 +16,7 @@
             <td>@language.Enabled</td>
 
             <td>
-                <button type="button" class="btn btn-primary" name="@IndexModel.EditLanguageName" data-id="@language.Id">
+                <button type="button" class="btn btn-primary" name="@JavascriptVariables.Instance.EditLanguageName" data-id="@language.Id">
                     <i class="fa-solid fa-pencil"></i>
                 </button>
             </td>
