Updated JS code

--- a/Store/Areas/Admin/Pages/Localization/Language/_List.cshtml
+++ b/Store/Areas/Admin/Pages/Localization/Language/_List.cshtml
@@ -16,7 +16,7 @@
             <td>@language.Enabled</td>
 
             <td>
-                <button type="button" class="btn btn-primary" name="@JavascriptVariables.Instance.EditLanguageName" data-id="@language.Id">
+                <button type="button" class="btn btn-primary" name="@JavascriptVariables.Instance.EditLanguageButtonName" data-id="@language.Id">
                     <i class="fa-solid fa-pencil"></i>
                 </button>
             </td>
