--- a/Store/Areas/Admin/Pages/Localization/Language/Index.cshtml
+++ b/Store/Areas/Admin/Pages/Localization/Language/Index.cshtml
@@ -51,7 +51,7 @@
                     </tr>
                 </thead>
 
-                <tbody id="@JavascriptVariables.Instance.TableBodyId">
+                <tbody id="@JavascriptVariables.Instance.ListParentId">
                     <tr>
                         <td scope="row" colspan="6" class="text-center">
                             <i class="fa-solid fa-spinner fa-spin fa-xl m-3"></i>
@@ -92,48 +92,27 @@
     
 
     <script>
-        const element = document.getElementById("@JavascriptVariables.Instance.ModalId");
-        const modal = new bootstrap.Modal(element);
+        const variables = @Html.Raw(JavascriptVariables.Serialize())
 
-        var variables = @Html.Raw(JavascriptVariables.Serialize())
+            addOpenAddFormEventListener("@Model.Localizer["Add"]");
 
-        setupCheckboxes(); 
-        updateList("List", "@JavascriptVariables.Instance.TableBodyId");
-       
-        document.getElementById("@JavascriptVariables.Instance.AddLanguageButtonId").addEventListener("click", event => {
-            openAddForm("AddForm", modal, "@JavascriptVariables.Instance.ModalTitleId", "@JavascriptVariables.Instance.ModalContentId", "@Model.Localizer["Add"]", "@JavascriptVariables.Instance.FormId");
-        })
+                // function configureSubmitOnAdd(){
+                //     document.getElementById("@JavascriptVariables.Instance.FormId").addEventListener("submit", event => {
+                //         event.preventDefault();
+                //         add();
+                //         getList();
+                //     })
+                // }
 
-        // function configureSubmitOnAdd(){
-        //     document.getElementById("@JavascriptVariables.Instance.FormId").addEventListener("submit", event => {
-        //         event.preventDefault();
-        //         add();
-        //         getList();
-        //     })
-        // }
+                // const editButtons = document.getElementsByName("@JavascriptVariables.Instance.EditLanguageButtonName");
 
-        // const editButtons = document.getElementsByName("@JavascriptVariables.Instance.EditLanguageName");
+                // editButtons.forEach(editButton => {
+                //     const id = editButton.dataset.id;
 
-        // editButtons.forEach(editButton => {
-        //     const id = editButton.dataset.id;
-
-        //     editButton.addEventListener("click", event => {
-        //         fetch(location.href + "?handler=EditForm&id=" + id)
-        //             .then(response => response.text())
-        //             .then(data => {
-        //                 document.getElementById("@JavascriptVariables.Instance.ModalTitleId").innerHTML = "@(Model.Localizer["Edit"])";
-        //                 document.getElementById("@JavascriptVariables.Instance.ModalContentId").innerHTML = data
-
-        //                 document.getElementById("@JavascriptVariables.Instance.FormId").addEventListener("submit", event => {
-        //                     event.preventDefault();
-        //                     edit();
-
-        //                     getList()
-        //                 });
-
-                        
-        //             })
-        //     })
-        // });
+                //     editButton.addEventListener("click", event => {
+                //         fetch(location.href + "?handler=EditForm&id=" + id)
+                //            
+                //     })
+                // });
     </script>
 }
