--- a/Store/Areas/Admin/Pages/Localization/Language/_List.cshtml
+++ b/Store/Areas/Admin/Pages/Localization/Language/_List.cshtml
@@ -19,6 +19,10 @@
                 <button type="button" class="btn btn-primary" name="@JavascriptVariables.Instance.EditLanguageButtonName" data-id="@language.Id">
                     <i class="fa-solid fa-pencil"></i>
                 </button>
+
+                <button type="button" class="btn btn-danger" name="@JavascriptVariables.Instance.DeleteLanguageButtonName" data-id="@language.Id">
+                    <i class="fa-solid fa-trash-can"></i>
+                </button>
             </td>
         </tr>
     }
